changed linkedin link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Software Engineer<br/>
 
 <a href="mailto:bkyoung@live.com">Email</a>
 <a href="contact.html">Phone</a>
-<a href="www.linkedin.com/in/brycekincaidyoung">LinkedIn</a>
+<a href="https://www.linkedin.com/in/brycekincaidyoung">LinkedIn</a>
 
 
 
