Added phone number anchor

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Software Engineer<br/>
 <a href="resume.pdf">Resume</a><br/>
 
 <a href="mailto:bkyoung@live.com">Email</a>
-<a href="contact.html">Phone</a>
+<a href="tel:14193221470">Phone</a>
 <a href="https://www.linkedin.com/in/brycekincaidyoung">LinkedIn</a>
 
 
