--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@ Bryce Young Resume
 </head>
 <body>
 
-Bryce Young<br/>
-Software Engineer<br/>
+<div class="bodyclass">
+<center>
+<div class="myname">Bryce Young<br/></div>
+Software Engineer<br/><br/>
 
 
 <a href="resume.pdf">Resume</a><br/>
 
 <a href="mailto:bkyoung@live.com">Email</a>
-<a href="tel:14193221470">Phone</a>
+<a href="tel:1-419-322-1470">Phone</a>
 <a href="https://www.linkedin.com/in/brycekincaidyoung">LinkedIn</a>
 
-
+</center>
+</div>
 
 
 
