--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@ Software Engineer<br/><br/>
 
 
 <a href="resume.pdf">Resume</a><br/>
-
-<a href="mailto:bkyoung@live.com">Email</a>
-<a href="tel:1-419-322-1470">Phone</a>
-<a href="https://www.linkedin.com/in/brycekincaidyoung">LinkedIn</a>
+<div class = "images">
+<a href="mailto:bkyoung@live.com"><img src="letter.svg"></a>
+<a href="tel:1-419-322-1470"><img src="telephone.svg"></a>
+<a href="https://www.linkedin.com/in/brycekincaidyoung"><img src = "linkedin.svg"></a>
+<a href="https://www.github.com/dubpred"><img src = "github.svg"></a>
+</div>
 
 </center>
 </div>
