Added resume icon

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@ Bryce Young Resume
 Software Engineer<br/><br/>
 
 
-<a href="resume.pdf">Resume</a><br/>
+<br/>
 <div class = "images">
+
 <a href="mailto:bkyoung@live.com"><img src="letter.svg"></a>
 <a href="tel:1-419-322-1470"><img src="telephone.svg"></a>
+<a href="resume.pdf"><img src="resume.svg"></a>
 <a href="https://www.linkedin.com/in/brycekincaidyoung"><img src = "linkedin.svg"></a>
 <a href="https://www.github.com/dubpred"><img src = "github.svg"></a>
 </div>
