add bulletpoint between bio line

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Bryce Young Resume
 
 <center>
 <div class="myname">Bryce Young</div><br/>
-Software Engineer<br/>
+Software Engineer &bull; Java SE8 Oracle Associate<br/>
 
 
 <br/>
