added animation to body of page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="format-detection" content="telephone=yes">
 <script src = "jquery-3.2.1.min.js">
 jQuery('img.svg').each(function(){
            var $img = jQuery(this);
@@ -37,15 +36,16 @@ jQuery('img.svg').each(function(){
 Bryce Young Resume
 </title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="animate.css">
 
 </head>
-<body>
+<body class = "animated fadeInUpBig">
 
 <center>
-<div class="myname">Bryce Young</div><br/>
+<div class="myname" >Bryce Young</div><br/>
 Software Engineer &bull; Java SE8 Oracle Associate<br/>
 
-
+<hr/>
 <br/>
 
 <div class = "images">
